<resources>
    <string name="app_name">BetterCodeAssignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry">Retry</string>
    <string name="mission_name">Mission Name :</string>
    <string name="launch_year">Launch Year :</string>
    <string name="launch_success">Launch Success :</string>
    <string name="article_link">Article link :</string>
    <string name="wikipedia">Wikipedia : </string>
</resources>